# internal/handler/handlers.go
@@ -10,6 +10,7 @@ import (
 type HandlersV1 struct {
 	Health   *v1.HealthHandler
 	Category *v1.CategoryHandler
+	Outcomes *v1.OutcomeHandler
 }
 
 type Handlers struct {
@@ -23,10 +24,14 @@ func NewHandlers(db *pgxpool.Pool) *Handlers {
 	categoryRepo := repository.NewCategoryRepository(db)
 	categoryService := service.NewCategoryService(categoryRepo)
 
+	outcomeRepo := repository.NewOutcomeRepository(db)
+	outcomeService := service.NewOutcomeService(outcomeRepo, categoryRepo)
+
 	return &Handlers{
 		V1: &HandlersV1{
 			Health:   v1.NewHealthHandler(healthService),
 			Category: v1.NewCategoryHandler(categoryService),
+			Outcomes: v1.NewOutcomeHandler(outcomeService),
 		},
 	}
 }
